config.h.cmake
@@ -103,6 +103,7 @@
 #cmakedefine HAVE_LIBWRAP 1
 #cmakedefine HAVE_SYSTEMD 1
 
+#cmakedefine HAVE_CPUID_INSTRUCTION 1
 #cmakedefine HAVE_CLMUL_INSTRUCTION 1
 #cmakedefine HAVE_CRC32_VPMSUM 1
 
